[tool.poetry]
name = "Akatosh"
version = "3.0.12"
description = ""
authors = ["Innovation Central Perth Maintainer <ryf0510@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
