[tool.poetry]
name = "Akatosh"
version = "3.0.16"
description = "Discrete event simulation framework supports real-time simulation without time step!"
authors = ["ulfaric <ryf0510@live.com>"]
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/ulfaric/Akatosh"
homepage = "https://ulfaric.github.io/Akatosh/"

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
